# discord-bot-voice-transcriptor

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  run-bot.sh
